--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{
-	background: url("PL - Assets/home.png") 800px 123px,
-		 url("PL - Assets/home-bc.png") top right, url("PL - Assets/footer-bc.jpg") center bottom;
-		 background-size: auto, auto, 100%;
+	background: url("PL - Assets/home.png") 850px 123px,
+		url("PL - Assets/home-bc.png") 720px 10px,
+		url("PL - Assets/footer-bc.jpg") center bottom;
+		 background-size: 20%, 54%, 100%;
     background-repeat: no-repeat;
     padding-left: 15%;
     margin: 0;
@@ -15,6 +16,7 @@ header{
 .imgheader{
 	width: 100px;
 	padding-left: 35%;
+	margin-top: 50px;
 }
 .nav{
 	list-style-type: none;
@@ -38,26 +40,22 @@ li{
 	text-decoration: none;
 }
 .titulo{
-    width: 80%;	
+    width: 100%;	
 	display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin-top: 49px;
 }
 .titulo h2{
 	font-family: Sunday;
 	font-weight: normal;
 	font-size: 1.25em;
 	color: #005884;
-	font-style: normal;
-	text-align: left;
 	line-height: 2.25em;
-	font-size: 1em;
 	color: #005884;
 	font-style: normal;
 	text-align: left;
-	line-height: 0.86em;
-    font-weight: normal; 
+	line-height: 2em;
+    padding-right: 40%;
 }
 .titulo1{
 	font-family: Sunday;
@@ -68,6 +66,16 @@ li{
 	line-height: 2.25em;
 	font-weight: normal;
 }
+.texto1{
+	font-family: Raleway;
+	font-size: 1em;
+	color: #005884;
+	font-style: normal;
+	text-align: left;
+	line-height: 1.3em;
+	padding-top: 62px;
+	padding-right: 35%;
+}
 .text-prg{
 	font-family: Raleway;
 	font-size: 1em;
@@ -76,6 +84,9 @@ li{
 	text-align: left;
 	line-height: 0.86em;
 	font-weight: 600;
+}
+.flores{
+
 }
 .home{
 	width: 22%;	
