--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ header{
 @media(max-width: 640px){
 	header{
 		display: none;
+
 	}
 }
 .logo{
@@ -103,7 +104,7 @@ main{
 @media (max-width: 640px){
 	.inicio h2{
 		width: 100%;
-		padding-right:20vh; 
+		padding-right:20%; 
 	}
 }
 .sobre{ /*Texto sobre o Pontinho de Luz*/ 
@@ -267,11 +268,14 @@ footer section{
 	display: flex;
 	flex-direction:row;
 	align-items: flex-start;
+	flex-wrap: wrap;
 }
 .contato2__div{
 	width: 31%;
 	/*background: 	red;*/
 }
+
+
 .icons-contato{
     display: flex;	
 	flex-wrap:wrap;
@@ -305,6 +309,12 @@ footer section{
 }
 .contato2 iframe{
 	margin: 0 30px;
+}
+@media(max-width: 640px){
+	.contato2 iframe{
+		margin: 0 auto;
+		margin-bottom: 10px; 
+	}
 }
 iframe{
 }
