--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@ body{
 }
 @media(max-width: 640px){
 	body{
-		background: url("PL - Assets/home.png") 230px 190px,
-					url("PL - Assets/home-bc.png") 120px 0%,
-					url("PL - Assets/footer-bc.jpg") 20% 3600px;
-		background-size:36%, 600px, 2300px;
+		background: url("PL - Assets/home.png") 200px 190px,
+					url("PL - Assets/home-bc.png") 40px 0px,
+					url("PL - Assets/footer-bc.jpg") 20% 3000px;
+		background-size:150px, 800px, 2300px;
 	    background-repeat:no-repeat, no-repeat, no-repeat;
 	    padding-top: 0%;
-	    padding-left: 5%;
+	    padding-left: 3%;
 	    margin:0;
 		}
 }	
@@ -44,7 +44,7 @@ header{
 }
 
 .nav{
-	padding-top: 28px;
+	padding-top:28px;
 	padding-left:30px;
 	display:flex;
 	flex-direction:column;
@@ -58,15 +58,15 @@ header{
 }
 @media(max-width: 640px){
 	.logo2{
+		width:40%;
+		padding-bottom:40px;
+		padding-right:60%;
 		display: inline;
-		padding-bottom: 50px;
-		padding-right: 60%;
-		width: 40%;
 	}
 }
 .a{
-	margin: 12px 0;
-	padding-top: 8px;
+	margin:12px 0;
+	padding-top:8px;
 	font-family:Raleway; 
 	font-size:1em;
 	font-weight:normal;
@@ -80,24 +80,24 @@ header{
 	font-weight:bold;
 }
 main{
-	width: 100%;
+	width:100%;
 }
 .inicio{
 	margin-top:49px;
     padding-left:6%;
 	display:flex;
     flex-direction:column; 
-  	padding-bottom: 23vh;
+  	padding-bottom:23vh;
     background: url("PL - Assets/flowers.svg") bottom no-repeat;
-    background-size: 60%;
-    background-repeat: repeat-x; 
+    background-size:60%;
+    background-repeat:repeat-x; 
 }
 @media(max-width: 640px){
 	.inicio{
-		padding-left: 0%;
-		padding-bottom: 15vh;
-		background-size: 450px;
-		background-repeat: repeat-x;
+		padding-left:0%;
+		padding-bottom:15vh;
+		background-size:450px;
+		background-repeat:repeat-x;
 	}
 }
 .inicio h2{
@@ -116,10 +116,10 @@ main{
 		width: 100%;
 	}
 }
-.sobre{ /*Texto sobre o Pontinho de Luz*/ 
-	padding-top: 42px;
-	padding-right:35%;
+.sobre{ 
     width:65%;	
+	padding-top:42px;
+	padding-right:35%;
 	font-family:Raleway;
 	font-size:1em;
 	font-style:normal;
@@ -129,20 +129,20 @@ main{
 }
 @media (max-width: 640px){
 	.sobre{
-		width: 93%;
+		width:93%;
 		padding-right: 0%;
 	}
 }
 .redes{
-	padding-top: 50px;
+	padding-top:50px;
 	padding-left:6%;
 	display:flex;
 	flex-wrap:wrap;
 }
 @media (max-width: 640px){
 	.redes{
-		padding-top: 25px;
-		padding-left: 0%;
+		padding-top:25px;
+		padding-left:0%;
 	}
 }
 .h2-redes{
@@ -163,13 +163,13 @@ figure{
 }
 @media (max-width: 640px){
 	figure{
+		width:50%;
 		display:flex;
 		flex-direction:column;
-		flex-wrap: wrap;
-		width:50%;
+		flex-wrap:wrap;
 	}
 }
-.rede{ /* IMAGENS REDE SOLIDARIEDADE*/
+.rede{
 	width:185px;
 	padding-right:10px;
 }
@@ -196,9 +196,10 @@ figure{
 }
  @media (max-width: 640px){
  	.programas{
- 		padding-left: 0%;
+ 		padding-left:0%;
+ 		padding-top:7%;
  	}
- }
+}
 .h2-programas, .h2-parceiros{ /*H2 PROGRAMAS, H2 PARCEIROS*/
 	width:100%;
 	font-family:Sunday;
@@ -209,7 +210,7 @@ figure{
 	color:#005884;
 	line-height:2.25em;	
 }
-.div-programas{ /*DIV PROGRAMAS*/
+.div-programas{
 	width:5%;
 	display:flex;
 	justify-content:center;
@@ -218,6 +219,7 @@ figure{
 @media(max-width: 640px){
 	.div-programas{
 		width: 10%;
+		padding-left: 4%;
 	}
 }
 .imagem-programas{
@@ -226,10 +228,10 @@ figure{
 }
 @media(max-width: 640px){
 	.imagem-programas{
-		/*width: 100%;*/
+		padding-top: 8%;
 	}
 }
-.text-programas{ /*H3 DE PROGRAMAS*/
+.text-programas{
 	width:10%;
 	margin-top:80px;
 	margin-left:1%;
@@ -244,10 +246,11 @@ figure{
 @media(max-width: 640px){
 	.text-programas{
 		width: 60%;
+		margin-top: 10%;
 		padding-left: 28px;
 	}
 }
-.p-programas{ /*P DE PROGRAMAS*/
+.p-programas{
 	width:80%;	
 	padding-top:62px;
 	font-family:Raleway;
@@ -260,6 +263,7 @@ figure{
 @media(max-width: 640px){
 	.p-programas{
 		width: 100%;
+		padding-top: 1%;
 		padding-left: 0%;
 	}
 }
@@ -274,29 +278,41 @@ figure{
  @media (max-width: 640px){
  	.parceiros{
  		padding-left: 0%;
+ 		padding-top: 0px;
+ 		padding-bottom: 40px;
  	}
- }
+}
 .parceiros img{
 	padding-top: 20px; 
 }
 .parceiro1{
 	width: 120px;
 }
+@media(max-width: 640px){
+	.parceiro1{
+		width:120px;
+		height: 45px;
+	}
+}
 .parceiro2{
-	width:	150px; /*IMAGEM-PARCEIROS*/
-	margin-left: 6%;
+	width: 180px;
+	margin-left: 10%; 
+}
+@media(max-width: 640px){
+	.parceiro2{
+		width: 180px;
+		margin-left: 10%; 
+	}
 }
 footer{
 	width:100%;
 	padding-bottom: 25px;
 	display: flex;
-	flex-direction: column;	
-	/*background:url("PL - Assets/footer-bc.jpg") bottom no-repeat;
-	background-size: 100%;*/
+	flex-direction: column;
 }
 @media(max-width: 640px){
 	footer{
-		padding-top: 70px;
+		padding-bottom: 12px;
 	}
 }
 footer section{
@@ -333,7 +349,7 @@ footer section{
 }
 @media(max-width: 640px){
 	.h2-contatos{
-		width: 90%;
+		width: 95%;
 	}
 }
 .solzinho{
@@ -366,7 +382,7 @@ footer section{
 }
 @media(max-width: 640px){
 	.icons-contato{
-		padding-left: 11%;
+		padding-left: 7%;
 	}
 }
 .icons{
@@ -399,7 +415,7 @@ footer section{
 @media(max-width: 640px){
 	.p-contatos2{
 		width: 60%;
-		padding-left: 11%;
+		padding-left: 7%;
 	}
 }
 .contato3{
@@ -412,8 +428,6 @@ footer section{
 @media(max-width: 640px){
 	.contato2 iframe{
 		margin: 0 auto;
-		margin-bottom: 16px; 
+		margin-bottom: 6px; 
 	}
-}
-iframe{
 }
