--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
 body{
+    padding-left:15%;
+    padding-top:70px;
+    margin:0;
 	background: url("PL - Assets/home.png") 880px 123px,
 				url("PL - Assets/home-bc.png") 720px 0px,
 				url("PL - Assets/footer-bc.jpg") 20% 100%;
 	background-size:18%,54%,100%;
     background-repeat: no-repeat, no-repeat, no-repeat;
-    padding-left:15%;
-    padding-top:70px;
-    margin:0;
+    position: relative;
 }
 @media(max-width: 640px){
 	body{
+	    padding-top: 0%;
+	    padding-left: 3%;
+	    margin:0;
 		background: url("PL - Assets/home.png") 200px 190px,
 					url("PL - Assets/home-bc.png") 40px 0px,
 					url("PL - Assets/footer-bc.jpg") 20% 3000px;
 		background-size:150px, 800px, 2300px;
 	    background-repeat:no-repeat, no-repeat, no-repeat;
-	    padding-top: 0%;
-	    padding-left: 3%;
-	    margin:0;
 		}
 }	
 header{
@@ -306,7 +307,7 @@ figure{
 }
 footer{
 	width:100%;
-	padding-bottom: 25px;
+	padding-bottom: 65px;
 	display: flex;
 	flex-direction: column;
 }
@@ -430,4 +431,32 @@ footer section{
 		margin: 0 auto;
 		margin-bottom: 6px; 
 	}
+}
+/*footer Vai na Web */
+.vnw{ 
+	width: 100%;
+    height: 40px; 
+	background: #f16337;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+.vnw__text{
+  font-family: 'filson-soft', sans-serif;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 16px;
+    color: #30368c;
+}
+.vnw__link{
+    color: #30368c;
+}
+@media (max-width: 768px){
+	.vnw__text{
+        font-size: 12px;
+    }
 }
